@@ -13,8 +13,9 @@ include(../beebeep.pri)
 message( Target folder: $$DESTDIR )
 
 TEMPLATE = app
-#DEFINES += MAKE_BEEBEEP_PORTABLE
-DEFINES += BEEBEEP_DISABLE_FILE_TRANSFER
+DEFINES += MAKE_BEEBEEP_PORTABLE
+#DEFINES += BEEBEEP_DISABLE_FILE_TRANSFER
+#DEFINES += BEEBEEP_DISABLE_SEND_MESSAGE
 TARGET = beebeep
 
 QT += network xml
